--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             'Accept': 'application/json',
           },
           body: JSON.stringify({
-            "TableName": "board-test",
+            "TableName": "kmk_practice",
             Item
           })
         }).then(resp => console.log(resp))
