--- a/register.html
+++ b/register.html
@@ -15,14 +15,14 @@
 	
   <body>
 
-    <h2 class="h3 mb-3 font-weight-normal" id="titleheader">EGG Platform</h2>
+    <h2 class="h3 mb-3 font-weight-normal" id="titleheader">EEG Platform</h2>
 
     <h3>Sign-Up</h3> 
 
 	<form class = "form-horizontal">
 	<table>
 		<tr>
-			<td class = "lebel">Emali : </td>
+			<td class = "lebel">Email : </td>
 			<td>
 				<input type="email" class="form-control" id="emailInputRegister" placeholder="Email" pattern=".*" required></td>
 		</tr>
