--- a/register.html
+++ b/register.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <link type = "text/css" rel = "stylesheet" href ="register.css">
-	<!-- Javascript SDK-->
+	  
+<!-- Javascript SDK-->
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> 
   <script src="js/amazon-cognito-auth.min.js"></script>
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script> 
@@ -22,72 +23,62 @@
 	<form class = "form-horizontal">
 	<table>
 		<tr>
-			<td class = "lebel">Email : </td>
+			<td>Email : </td>
 			<td>
-				<input type="email" class="form-control" id="emailInputRegister" placeholder="Email" pattern=".*" required></td>
+				<input type="email" class="form-control" id="emailInputRegister" placeholder="Email" pattern=".*" required autofocus></td>
 		</tr>
 		<tr>
 			<td><label>Password : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Password" pattern=".*" required></td>
+			<td><input type="password" class="form-control" id="passwordInputRegister" placeholder="Password" pattern=".*" required></td>
 		</tr>
 		<tr>
 			<td><label>Retry-Password : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Retry-Password" pattern=".*" required></td>
+			<td><input type="password" class="form-control" id="confirmationpassword" placeholder="Retry-Password" pattern=".*" required></td>
 		</tr>
 		<tr>
 			<td><label>Last Name : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Last Name" pattern=".*" required></td>
+			<td><input type="text" class="form-control" id="lastnameRegister" placeholder="Last Name" pattern=".*" required></td>
 		</tr>
 		<tr>
 			<td><label>First Name : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="First Name" pattern=".*" required></td>
+			<td><input type="text" class="form-control" id="firstnameRegister" placeholder="First Name" pattern=".*" required></td>
 		</tr>
 		<tr>
 			<td><label>Affiation : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Affiation" pattern=".*" required></td>
+			<td><input type="text" class="form-control" id="affiationRegister" placeholder="Affiation" pattern=".*" required></td>
 		</tr>
 		<tr>
 			<td><label>Position : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Position" pattern=".*" required></td>
+			<td><input type="text" class="form-control" id="positionRegister" placeholder="Position" pattern=".*" required></td>
 		</tr>
 		<tr><td><br></td></tr>
 		<tr>
 		<td><label>Question 1 ~ : </label></td>
-		<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Question1" pattern=".*" required></td>
+		<td><input type="email" class="form-control" id="question1Register" placeholder="Question1" pattern=".*"></td>
 		</tr>
 		<tr>
 			<td><label>Question 2 ~ : </label></td>
-			<td><input type="email" class="form-control" id="emailInputRegister" placeholder="Question2" pattern=".*" required></td>
+			<td><input type="email" class="form-control" id="question2Register" placeholder="Question2" pattern=".*"></td>
 		</tr>
 	</table><br><br>	
 
       <div id = "button">
-      <button type="button" class = "button" onclick="signInButton()">submit</button>  
-      <button type="button" class = "button" onclick="registerbutton()">reset</button><br>
+      <button type="button" class = "button" onclick="registerButton()">submit</button>  
+      <button type="button" class = "button" onclick="resetButton()">reset</button><br>
       </div>
 
     </form>
 
-    <!--
-	<input type="personalname" class="form-control" id="personalnameRegister" placeholder="Name" pattern=".*" required></td>
-	<input type="email" class="form-control" id="emailInputRegister" placeholder="Email" pattern=".*" required>
-	<input type="password" class="form-control" id="passwordInputRegister" placeholder="Password" pattern=".*" required><br>
-    <input type="password" class="form-control" id="confirmationpassword" placeholder="Confirm Password" pattern=".*" required><br>
-	<button id="mainbutton" class="btn btn-lg btn-primary btn-block" type="button" onclick="registerButton()" >Register</button>
-
-	-->
-    
 	<script>
 
-		var username;
+		var lastname;
+		var firstname;
 		var password;
 		var personalname;
 		var poolData;
-			
-	  function registerButton() {
+		var email;   
 		
-		personalnamename =  document.getElementById("personalnameRegister").value;	
-		username = document.getElementById("emailInputRegister").value;
+	 function registerButton() {
 		
 		if (document.getElementById("passwordInputRegister").value != document.getElementById("confirmationpassword").value) {
 			alert("Passwords Do Not Match!")
@@ -95,44 +86,20 @@
 		} else {
 			password =  document.getElementById("passwordInputRegister").value;	
 		}
-		
-		poolData = {
-				UserPoolId : _config.cognito.userPoolId, // Your user pool id here
-				ClientId : _config.cognito.clientId // Your client id here
-			};		
-		var userPool = new AmazonCognitoIdentity.CognitoUserPool(poolData);
-
-		var attributeList = [];
-		
-		var dataEmail = {
-			Name : 'email', 
-			Value : username, //get from form field
-		};
-		
-		var dataPersonalName = {
-			Name : 'name', 
-			Value : personalname, //get from form field
-		};
-
-		var attributeEmail = new AmazonCognitoIdentity.CognitoUserAttribute(dataEmail);
-		var attributePersonalName = new AmazonCognitoIdentity.CognitoUserAttribute(dataPersonalName);
-		
-		
-		attributeList.push(attributeEmail);
-		attributeList.push(attributePersonalName);
-
-		userPool.signUp(username, password, attributeList, null, function(err, result){
-			if (err) {
-				alert(err.message || JSON.stringify(err));
-				return;
-			}
-			cognitoUser = result.user;
-			console.log('user name is ' + cognitoUser.getUsername());
-			//change elements of page
-			document.getElementById("titleheader").innerHTML = "Check your email for a verification link";
-			
-		});
 	  }
+ 
+	function resetButton(){
+
+          document.querySelector("#emailInputRegister").value = '';
+          document.querySelector("#passwordInputRegister").value = '';
+          document.querySelector("#confirmationpassword").value = '';
+          document.querySelector("#lastnameRegister").value = '';
+	  document.querySelector("#firstnameRegister").value = '';
+          document.querySelector("#positionRegister").value = '';
+          document.querySelector("#affiationRegister").value = '';
+          document.querySelector("#question1Register").value = '';
+          document.querySelector("#question2Register").value = '';          
+	}
 
 	</script>
  
