--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
 
     <h3>Sign-Up</h3> 
 
-	<form class = "form-horizontal">
+	<form class = "form-horizontal" id = "f">
 	<table>
 		<tr>
 			<td>Email : </td>
