--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
 
     <h2 class="h3 mb-3 font-weight-normal" id="titleheader">EEG Platform</h2>
 
-    <h3>Sign-Up</h3> 
+    <h3 id='signup'>Sign-Up</h3> 
 
 	<form class = "form-horizontal" id = "f">
 	<table>
