--- a/profile.html
+++ b/profile.html
@@ -62,7 +62,7 @@
 	function signOut(){
 	    if (cognitoUser != null) {
           cognitoUser.signOut();
-          location.href = "login.html";	  
+          location.href = "index.html";	  
         }
 	}
     </script>
