--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <link type = "text/css" rel = "stylesheet" href ="login.css">
+    <link type = "text/css" rel = "stylesheet" href ="css/login.css">
     <meta charset="utf-8">
 
 	<!-- Javascript SDKs-->
