--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link type = "text/css" rel = "stylesheet" href ="register.css">
+    <link type = "text/css" rel = "stylesheet" href ="css/register.css">
 	  
 <!-- Javascript SDK-->
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> 
