--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         onSuccess: function (result) {
 			var accessToken = result.getAccessToken().getJwtToken();
 			console.log(accessToken);
-		        location.href = "profile.html";
+		        location.href = "file_upload.html";
         },
 
         onFailure: function(err) {
