--- a/file_upload.html
+++ b/file_upload.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Upload System</title>
+        <script src="js/config.js"></script>
         <style>
         </style>
             <!--켜지면 get() 함수를 실행함.  -->
