--- a/index.html
+++ b/index.html
@@ -67,7 +67,28 @@
         Username : document.getElementById("inputUsername").value,
         Pool : userPool,
     };
-	
+	  
+    // uesrpooid와 identityPoolid 통합 로그인	  
+    if (cognitoUser != null) {
+  	cognitoUser.getSession(function(err, result) {
+    		if (result) {
+      			console.log('You are now logged in.');
+
+     		 // Add the User's Id Token to the Cognito credentials login map.
+     			 AWS.config.credentials = new AWS.CognitoIdentityCredentials({
+        			IdentityPoolId: 'ap-northeast-2:3a5facf1-3a37-41ee-8d05-ed417fd9c0d9',
+        			Logins: {
+          				'cognito-idp.ap-northeast-2.amazonaws.com/ap-northeast-2_4D9Vxpt6k': result.getIdToken().getJwtToken()
+           
+        			}
+
+     			 });
+     			 location.href = "profile.html";
+    		}
+  	 });
+    }
+	  
+```	
     var cognitoUser = new AmazonCognitoIdentity.CognitoUser(userData);
     
 	cognitoUser.authenticateUser(authenticationDetails, {
@@ -81,6 +102,7 @@
             alert(err.message || JSON.stringify(err));
         },
     });
+ ```
   }
 	
   function  registerbutton(){
