--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         			}
 
      			 });
-     			 location.href = "profile.html";
+     			 location.href = "file_upload.html";
     		}
   	 });
     }
