--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         Pool : userPool,
     };
     var cognitoUser = new AmazonCognitoIdentity.CognitoUser(userData);
+    console.log('cognitoUser :' ,cognitoUser);
 	  
     // uesrpooid와 identityPoolid 통합 로그인	  
     if (cognitoUser != null) {
