--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
                    }     
                 })
                 });
-           location.href = "file_upload.html";
+	    console.log('자격증명 인증 성공');	
+           //location.href = "file_upload.html";
         }
      });
      }
