자격 증명 풀과 사용자 풀 통합 로그인 인증

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                    }     
                 })
                 });
-	    console.log('자격증명 인증 성공');	
-           //location.href = "file_upload.html";
+	    //console.log('자격증명 인증 성공');	
+           location.href = "file_upload.html";
         }
      });
      }
