자격 증명 풀과 사용자 풀 통합 로그인 인증

--- a/index.html
+++ b/index.html
@@ -89,17 +89,16 @@
         if (result) {
             console.log('You are now logged in.');
 
-         // Add the User's Id Token to the Cognito credentials login map.
-           AWS.config.update({
-                  region: 'ap-northeast-2',
-                  credentials: new AWS.CognitoIdentityCredentials({
-                  IdentityPoolId: 'ap-northeast-2:3a5facf1-3a37-41ee-8d05-ed417fd9c0d9',
-                  Logins: {
-                        'cognito-idp.ap-northeast-2.amazonaws.com/ap-northeast-2_4D9Vxpt6k': result.getIdToken().getJwtToken()
-                   }     
-                })
-                });
-	    //console.log('자격증명 인증 성공');	
+           // Add the User's Id Token to the Cognito credentials login map.
+           AWS.config.credentials = new AWS.CognitoIdentityCredentials({
+              IdentityPoolId: 'ap-northeast-2:3a5facf1-3a37-41ee-8d05-ed417fd9c0d9',
+              Logins: {
+                  'cognito-idp.ap-northeast-2.amazonaws.com/ap-northeast-2_4D9Vxpt6k':result.getIdToken().getJwtToken()
+           
+              }
+
+           });
+           //console.log("로그인 성공");
            location.href = "file_upload.html";
         }
      });
