--- a/file_upload.html
+++ b/file_upload.html
@@ -86,6 +86,26 @@
         });
     }
 }
+ 
+   if (cognitoUser != null) {
+    cognitoUser.getSession(function(err, result) {
+        if (result) {
+            console.log('You are now logged in.');
+
+           // Add the User's Id Token to the Cognito credentials login map.
+           AWS.config.credentials = new AWS.CognitoIdentityCredentials({
+              IdentityPoolId: 'ap-northeast-2:3a5facf1-3a37-41ee-8d05-ed417fd9c0d9',
+              Logins: {
+                  'cognito-idp.ap-northeast-2.amazonaws.com/ap-northeast-2_4D9Vxpt6k':result.getIdToken().getJwtToken()
+           
+              }
+
+           });
+           console.log("로그인 성공");
+           //location.href = "file_upload.html";
+        }
+     });
+     }
                                
       function getHtml(template) {
           return template.join('\n');
