--- a/file_upload.html
+++ b/file_upload.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Upload System</title>
-        <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
-        <script src="js/amazon-cognito-identity.min.js"></script>
-        <script src="./app.js"></script>      
-        <script src="js/config.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>      
+    <script src="js/amazon-cognito-auth.min.js"></script>  
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script> 
+    <script src="js/amazon-cognito-identity.min.js"></script>  
+    <script src="js/config.js"></script>
         
         <style>
         </style>
