--- a/file_upload.html
+++ b/file_upload.html
@@ -8,7 +8,7 @@
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.7.16.min.js"></script> 
     <script src="js/amazon-cognito-identity.min.js"></script>  
     <script src="js/config.js"></script>
-        
+    <script src="./app.js"></script>     
         <style>
         </style>
             <!--켜지면 get() 함수를 실행함.  -->
