--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 				// Instantiate aws sdk service objects now that the credentials have been updated.
 				// example: var s3 = new AWS.S3();
 				console.log('Successfully logged!');
+				location.href = "file_upload.html";
 			}
 		});
 	},
