--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         onSuccess: function (result) {
 			var accessToken = result.getAccessToken().getJwtToken();
 			console.log(accessToken);
-		        //location.href = "file_upload.html";
+		        location.href = "file_upload.html";
         },
 
         onFailure: function(err) {
