--- a/profile_fileupload.html
+++ b/profile_fileupload.html
@@ -13,23 +13,15 @@
 
   <body onLoad="get()">
 
-	<div class="container">
-      <div>
-        <h2>EEG Platform</h2>
-      </div>
-	
-	<div>
-
+	<div class="container">      
+               <h2>EEG Platform</h2>
+      		  
 		<b>Account : </b>
 		<label id="email_value"></label>
 		<label id = "level">(admin)</label>
 
-		<button type="button" onclick="signOut()">Sign out</button>
-		
-		<br>
-	
-		
-    </div>
+		<button type="button" onclick="signOut()">Sign out</button><br>					
+         </div>
 
     <div id = "page">
     	
@@ -40,6 +32,7 @@
         <div class="Top">
   
         </div>
+	  
         <div style="text-align: center;"><h3>Upload</h3></div>
  
         <form name="article_add_form" method="POST">
